# JiraMeetSync

./: README.md
jira_ticket_agent_meeting/: README.md  pyproject.toml
jira_ticket_agent_meeting/src/jira_ticket_agent_meeting/: crew.py  main.py
jira_ticket_agent_meeting/src/jira_ticket_agent_meeting/config/: agents.yaml  tasks.yaml
jira_ticket_agent_meeting/src/jira_ticket_agent_meeting/tools/: jiraticket_tool.py
